js/js.translator/testData/incremental/invalidation/renamePackageWithConsumer/main/m.0.kt
import sample.a.foo

fun box(stepId: Int, isWasm: Boolean): String {
    return if (foo() == 0) "OK" else "Fail step0"
}
